--- a/PMI.PubSubUAAdapter/AppData/Configuration.MachineModule.json
+++ b/PMI.PubSubUAAdapter/AppData/Configuration.MachineModule.json
@@ -1,6 +1,7 @@
 {
   "Id": 123,
-  "PusblishInterval": 1000, //ms
+  "PublishInterval": 1000, //ms
+  "ParentType": "Device",
   "Fields": [
     {
       "FieldName": "LiveStatus.ControlMode",
