--- a/PMI.PubSubUAAdapter/AppData/Configuration.MaterialLot.json
+++ b/PMI.PubSubUAAdapter/AppData/Configuration.MaterialLot.json
@@ -1,6 +1,6 @@
 {
   "Id": 123,
-  "PusblishInterval": 1000,  //ms
+  "PublishInterval": 1000,  //ms
   "Fields": [
     {
       "FieldName": "DisplayFormat"
@@ -12,10 +12,12 @@
       "FieldName": "QuantityInLUoM"
     },
     {
-      "FieldName": "QuantityInLUoM.DisplayFormat"
+      "FieldName": "QuantityInLUoM.DisplayFormat",
+      "BrowseName": "DisplayFormat"
     },
     {
-      "FieldName": "QuantityInLUoM.EngineeringUnits"
+      "FieldName": "QuantityInLUoM.EngineeringUnits",
+      "BrowseName": "EngineeringUnits"
     }
   ]
 }
