--- a/PublisherDataSource/PublisherDataSource.csproj
+++ b/PublisherDataSource/PublisherDataSource.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>PublisherDataSource</RootNamespace>
     <AssemblyName>PublisherDataSource</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -50,6 +50,10 @@
     <ProjectReference Include="..\DataSource\DataSource.csproj">
       <Project>{ACC81814-AD70-40DB-AD26-ADDCC6382112}</Project>
       <Name>DataSource</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Opc.Ua.CommonFunctions\Opc.Ua.CommonFunctions.csproj">
+      <Project>{24e0c10e-e77b-4b70-9317-a53d35f86f87}</Project>
+      <Name>Opc.Ua.CommonFunctions</Name>
     </ProjectReference>
     <ProjectReference Include="..\SampleApplications\Samples\ClientControls.Net4\UA Client Controls.csproj">
       <Project>{A247D2EE-14FC-463D-A9BA-6CFF1EF22B7A}</Project>
