--- a/SampleApplications/Samples/PubSub Configuration Tool/PubSubBase/PubSubBase.csproj
+++ b/SampleApplications/Samples/PubSub Configuration Tool/PubSubBase/PubSubBase.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Definitions\TreeViewNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\AssemblyVersionInfo.cs" />
+    <Compile Include="Definitions\PublishedEventSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Stack\Opc.Ua.Core\Opc.Ua.Core.csproj">
