--- a/PMI.PubSubUAAdapter/app.config
+++ b/PMI.PubSubUAAdapter/app.config
@@ -87,6 +87,7 @@
     <add key="PubSubTypeDefinitionId" value="i=14354;ns=0" />
     <add key="PublishedDataSetsNodeId" value="i=17371;ns=0" />
     <add key="AddPublishedDataSetsNodeId" value="s=17371.AddPublishedDataItems;ns=0" />
+    <add key="AddPublishedEventsNodeId" value="s=17371.AddPublishedEvents;ns=0" />
     <add key="RemovePublishedDataSetsNodeId" value="s=17371.RemovePublishedDataSet;ns=0" />
     <add key="WriterToDataSetTypeDefinition" value="i=14534;ns=0" />
     <add key="DataSetReaderTypeId" value="i=15306;ns=0" />
