--- a/Opc.Ua.Extensions/Opc.Ua.Extensions.csproj
+++ b/Opc.Ua.Extensions/Opc.Ua.Extensions.csproj
@@ -4,14 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AB572CF2-5D9F-4CDF-A6E9-F09704642862}</ProjectGuid>
+    <ProjectGuid>{3B4B6517-201D-4A18-B176-01BB5F6AF6CE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PublisherDataSource</RootNamespace>
-    <AssemblyName>PublisherDataSource</AssemblyName>
+    <RootNamespace>Opc.Ua.Extensions</RootNamespace>
+    <AssemblyName>Opc.Ua.Extensions</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,7 +29,6 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -43,33 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UAPublisherDataSource.cs" />
+    <Compile Include="EventMonitoredItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataSource\DataSource.csproj">
-      <Project>{ACC81814-AD70-40DB-AD26-ADDCC6382112}</Project>
-      <Name>DataSource</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Opc.Ua.CommonFunctions\Opc.Ua.CommonFunctions.csproj">
-      <Project>{24e0c10e-e77b-4b70-9317-a53d35f86f87}</Project>
-      <Name>Opc.Ua.CommonFunctions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Opc.Ua.Extensions\Opc.Ua.Extensions.csproj">
-      <Project>{3b4b6517-201d-4a18-b176-01bb5f6af6ce}</Project>
-      <Name>Opc.Ua.Extensions</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SampleApplications\Samples\ClientControls.Net4\UA Client Controls.csproj">
-      <Project>{A247D2EE-14FC-463D-A9BA-6CFF1EF22B7A}</Project>
-      <Name>UA Client Controls</Name>
-    </ProjectReference>
     <ProjectReference Include="..\SampleApplications\SDK\Opc.Ua.Client\Opc.Ua.Client.csproj">
       <Project>{15100583-bfef-431b-a1ea-1e5a843a39b1}</Project>
       <Name>Opc.Ua.Client</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SampleApplications\SDK\Opc.Ua.Configuration\Opc.Ua.Configuration.csproj">
-      <Project>{a39614ca-8ebe-4408-a9d2-38c7e5ae2a1d}</Project>
-      <Name>Opc.Ua.Configuration</Name>
     </ProjectReference>
     <ProjectReference Include="..\Stack\Opc.Ua.Core\Opc.Ua.Core.csproj">
       <Project>{d918c0f6-39bd-4ed0-8323-e5a2eb9a85da}</Project>
