--- a/PMI.PubSubUAAdapter/AppData/Configuration.ProcessControlLoop.json
+++ b/PMI.PubSubUAAdapter/AppData/Configuration.ProcessControlLoop.json
@@ -12,7 +12,8 @@
     },
     {
       "FieldName": "SetPoint",
-      "ComplexVariableType": "ProcessItem"
+      "ComplexVariableType": "ProcessItem",
+      "Optional": true
     }
   ]
 }
