add: comments and env var configuration of broker address/port

--- a/PMI.PubSubUAAdapter/PMI.PubSubOpcUaServer.csproj
+++ b/PMI.PubSubUAAdapter/PMI.PubSubOpcUaServer.csproj
@@ -25,4 +25,13 @@
     <ProjectReference Include="..\UDPTransportDataSource\UDPTransportDataSource.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Opc.Ua.SampleServer.Config.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="OPCUAClient_PubSubConfig.Config.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
