--- a/PMI.PubSubUAAdapter/Properties/launchSettings.json
+++ b/PMI.PubSubUAAdapter/Properties/launchSettings.json
@@ -3,8 +3,12 @@
     "PMI.PubSubOpcUaServer": {
       "commandName": "Project",
       "environmentVariables": {
+        "BROKER_USERNAME": "aleph",
+        "OPCUA_SERVER_URL": "opc.tcp://localhost:48030",
         "BROKER_IP": "40.91.255.161",
-        "BROKER_PORT": "1883"
+        "BROKER_PORT": "1883",
+        "BROKER_PASSWORD": "A13phQ",
+        "BROKER_SECURITY": "1"
       }
     }
   }
