--- a/PMI.PubSubUAAdapter/app.config
+++ b/PMI.PubSubUAAdapter/app.config
@@ -110,7 +110,7 @@
     <add key="BrokerDataSetReaderTransportDataType" value="i=15670;ns=0" />
     <add key="DatagramConnectionTransportType" value="i=15064;ns=0" />
   </appSettings>
-  <startup>
+  <!--<startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <system.web>
@@ -156,5 +156,5 @@
         <bindingRedirect oldVersion="0.0.0.0-4.1.2.0" newVersion="4.1.2.0" />
       </dependentAssembly>
     </assemblyBinding>
-  </runtime>
+  </runtime>-->
 </configuration>
