--- a/PMI.PubSubOpcUaServer/app.config
+++ b/PMI.PubSubOpcUaServer/app.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="Opc.Ua.SampleServer" type="Opc.Ua.ApplicationConfigurationSection,Opc.Ua.Core" />
+    <section name="Opc.Ua.PubSubServer" type="Opc.Ua.ApplicationConfigurationSection,Opc.Ua.Core" />
     <section name="OPCUAClient_PubSubConfig" type="Opc.Ua.ApplicationConfigurationSection,Opc.Ua.Core" />
   </configSections>
   <!--<Opc.Ua.SampleServer>
