fix: "sample" words

--- a/ClientAdaptor.NonInteractive/ClientAdaptor.csproj
+++ b/ClientAdaptor.NonInteractive/ClientAdaptor.csproj
@@ -16,5 +16,9 @@
     <ProjectReference Include="..\Stack\Opc.Ua.Core\Opc.Ua.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 
 </Project>
