--- a/PMI.PubSubOpcUaServer/PMI.PubSubOpcUaServer.csproj
+++ b/PMI.PubSubOpcUaServer/PMI.PubSubOpcUaServer.csproj
@@ -17,7 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AMQPTransportDataSource\AMQPTransportDataSource.csproj" />
-    <ProjectReference Include="..\ClientAdaptor.NonInteractive\ClientAdaptor.NonInteractive.csproj" />
+    <ProjectReference Include="..\ClientAdaptor.NonInteractive\ClientAdaptor.csproj" />
     <ProjectReference Include="..\DataSource\DataSource.csproj" />
     <ProjectReference Include="..\MQTTTransportDataSource\MQTTTransportDataSource.csproj" />
     <ProjectReference Include="..\Opc.Ua.CommonFunctions\Opc.Ua.CommonFunctions.csproj" />
@@ -76,6 +76,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="AppData\Configuration.ProcessItem.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Opc.Ua.PubSubServer.Config.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="Opc.Ua.SampleServer.Config.xml">
