--- a/SampleApplications/Samples/PubSub Configuration Tool/PubSubBase/PubSubBase.csproj
+++ b/SampleApplications/Samples/PubSub Configuration Tool/PubSubBase/PubSubBase.csproj
@@ -15,4 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Stack\Opc.Ua.Core\Opc.Ua.Core.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
 </Project>
