--- a/PMIE.PubSubOpcUaServer/Properties/launchSettings.json
+++ b/PMIE.PubSubOpcUaServer/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "PMI.PubSubOpcUaServer": {
+    "PMIE.PubSubOpcUaServer": {
       "commandName": "Project",
       "environmentVariables": {
         "MQTT_CLIENT_CERT": "AppData\\Certs\\cert.crt",
@@ -8,7 +8,7 @@
         "OPCUA_SERVER_URL": "opc.tcp://localhost:48030",
         "BROKER_IP": "40.91.255.161",
         "BROKER_PORT": "1883",
-        "BROKER_PASSWORD": "A13phQ",
+        "BROKER_PASSWORD": "niSEQ55ywO3ubLMu2UthHg==", //"A13phQ",
         "BROKER_SECURITY": "1",
         "MQTT_CLIENT_CA_CERT": "AppData\\Certs\\cert_ca.crt",
         "KEYFRAMECOUNT": "1"
