add: mqtt tls enable env var

--- a/PMIE.PubSubOpcUaServer/Properties/launchSettings.json
+++ b/PMIE.PubSubOpcUaServer/Properties/launchSettings.json
@@ -4,13 +4,14 @@
       "commandName": "Project",
       "environmentVariables": {
         "MQTT_CLIENT_CERT": "AppData\\Certs\\cert.crt",
+        "BROKER_ENABLE_TLS": "false",
         "BROKER_USERNAME": "aleph",
         "KEYFRAMECOUNT": "1",
-        "OPCUA_SERVER_URL": "opc.tcp://localhost:48030",
-        "BROKER_IP": "mq-broker-iiot-mtb-prd.prd.paas.pmiapps.biz",
-        "BROKER_PORT": "443",
+        "OPCUA_SERVER_URL": "opc.tcp://192.168.1.92:48030",
+        "BROKER_IP": "40.91.255.161",
+        "BROKER_PORT": "1883",
+        "BROKER_AUTH": "1",
         "BROKER_PASSWORD": "niSEQ55ywO3ubLMu2UthHg==",
-        "BROKER_SECURITY": "2",
         "MQTT_CLIENT_CA_CERT": "AppData\\Certs\\mq-broker-iiot-mtb-prod.ca.pem"
       }
     }
