--- a/PMIE.PubSubOpcUaServer/PMIE.PubSubOpcUaServer.csproj
+++ b/PMIE.PubSubOpcUaServer/PMIE.PubSubOpcUaServer.csproj
@@ -20,6 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.4" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
   </ItemGroup>
 
